--- a/calculator.html
+++ b/calculator.html
@@ -14,6 +14,10 @@ function cube4() {
 var num4 = document.getElementById("n4");
 num4.value = Math.pow(num4.value, 4);
 }
+function cube3() {
+var num3 = document.getElementById("n3”);
+num3.value = Math.pow(num3.value, 3);
+}
 </script>
 </head>
 <body>
@@ -34,7 +38,13 @@ Seno:
 <input type="text" id="n2">
 <p>
 <button onclick="cube2()"> Seno </button>
->>>>>>> sine
+
+</p>
+eno:
+<input type="text" id="n3”>
+<p>
+<button onclick="cube3()”> x2</button>
+
 </p>
 </body>
 </html>
